# spark-best-fit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject-tools.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
config/: example.conf
docs/: api.rst  conf.py  index.rst  quickstart.rst
examples/: api_demo.ipynb  basic_usage.py  config_driven.py  large_dataset.py  quickstart.ipynb
scripts/: validate_examples.py
src/spark_dist_fit/: __init__.py  _version.py  config.py  core.py  distributions.py  fitting.py  histogram.py  plotting.py  results.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_distributions.py  test_fitting.py  test_histogram.py  test_performance.py  test_plotting.py  test_results.py  test_utils.py
